# AoC2022

./: .gitignore  AoC.cabal  CHANGELOG.md  README.md  flake.nix  hie.yaml
app/: Main.hs
benchmark/: Main.hs
src/: AoC.hs  Day1.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day2.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs
src/AoC/: Api.hs  Parsing.hs  Queue.hs  Util.hs
test/: Spec.hs
